# resources/views/meal/show.blade.php
@@ -6,7 +6,7 @@
 
     <span>{{ $meal->provider }}</span>
     <span>{{ $meal->date_from->format(trans('futtertrog.date_format')) }} - {{ $meal->date_to->format(trans('futtertrog.date_format')) }}</span>
-    <span>@money($meal->price)</span>
+    <span>{{ $meal->price }}</span>
 
     <p>{{ $meal->description }}</p>
 
